#33: deleteEventController
